# hahu

./: .env.defaults  .env.example  .gitignore  README.md  main.sh  pyproject.toml
hahu/: main.py
hahu/templates/: mail.mustache
tests/: test_hahu.py
