[tool.poetry]
name = "hahu"
version = "0.2.0"
description = "Hasznaltauto.hu crawler"
authors = ["mobal <info@netcode.hu>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pylint = "^2.6.0"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
python-dotenv = {extras = ["cli"], version = "^0.15.0"}
chevron = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
