[tool.poetry]
name = "hahu"
version = "1.0.0"
description = "Hasznaltauto.hu crawler"
authors = ["mobal <info@netcode.hu>"]

[tool.poetry.dependencies]
python = "^3.9.10"
pylint = "^2.12.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
python-dotenv = {extras = ["cli"], version = "^0.19.2"}
chevron = "^0.14.0"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
